<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyFractions,TypographyEllipsis">
    <string name="app_name">CanZE</string>
    <string name="action_settings">Settings</string>
    <string name="menu_Bluetooth" translatable="false">Bluetooth</string>
    <string name="default_Zero" translatable="false">0</string>
    <string name="default_Dash" translatable="false">-</string>
    <string name="default_Slash" translatable="false">/</string>
    <string name="default_DoubleSpace" translatable="false">\u0020\u0020</string>
    <string name="default_Yes">Yes</string>
    <string name="default_No">No</string>
    <string name="default_Ok">OK</string>
    <string name="default_NotOk">Not OK</string>
    <string name="default_Cancel">Cancel</string>
    <string name="default_Reset">Reset</string>
    <string name="format_NoView" formatted="false">No view with id \'%s%s\'</string>
    <string name="format_YMDHMSs" translatable="false">yyyyMMddHHmmssSSS</string>
    <string name="format_YMDHM" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_YMDHMS" translatable="false">yyyy-MM-dd-HH-mm-ss</string>
    <string name="unit_Nm">Nm</string>
    <string name="unit_Km" translatable="false">\u0020km</string>
    <string name="unit_Mi" translatable="false">\u0020mi</string>
    <string name="unit_SpeedKm">\u0020km/h</string>
    <string name="unit_SpeedMi">\u0020mi/h</string>
    <string name="unit_ConsumptionKm">\u0020kWh/100km</string>
    <string name="unit_ConsumptionMiAlt">\u0020mi/kWh</string>
    <string name="unit_Celsius" translatable="false">°C</string>
    <string name="label_debug">Debug\u0020</string>
    <string name="default_debug">#Debug</string>
    <string name="toast_InitWidgets">Initialising widgets</string>
    <string name="toast_BluetoothLost">Bluetooth connection lost!</string>
    <string name="prompt_Disclaimer" translatable="false">Formal Disclaimer</string>
    <string name="prompt_Accept">Yes, I got it!</string>
    <string name="prompt_Decline">No, I didn\'t understand a word…</string>
    <string name="prompt_DisclaimerText" translatable="false"><![CDATA[<html>CanZE (“the software”) is provided as is. Use the software at your own
                            risk. The authors make no warranties as to performance or fitness for a particular purpose,
                            or any other warranties whether expressed or implied. No oral or written communication
                            from or information provided by the authors shall create a warranty. Under no circumstances
                            shall the authors be liable for direct, indirect, special, incidental, or consequential
                            damages resulting from the use, misuse, or inability to use the software, even if the author
                            has been advised of the possibility of such damages. These exclusions and limitations may not
                            apply in all jurisdictions. You may have additional rights and some of these limitations may not
                            apply to you. This software is only intended for scientific usage.
                            <br>
                            <br>
                            <b>By using this software you are interfering with your car and doing that with hardware and
                            software beyond your control, created by a loose team of interested amateurs in this field. Any
                            car is a possibly lethal piece of machinery and you might hurt or kill yourself or others using
                            it, or even paying attention to the displays instead of watching the road.</b></html></string>
    <string name="toast_Reconnecting">Reconnecting Bluetooth…</string>
    <string name="toast_NotWhileDriving">Not possible while driving…</string>
    <string name="toast_AdjustSettings">Please adjust the settings first</string>
    <string name="menu_Main">Main</string>
    <string name="help_Main">Use swipe gestures to switch between Main, Technical and Experimental screens.</string>
    <string name="menu_Technical">Technical</string>
    <string name="menu_Experimental">Experimental</string>
    <string name="help_Experimental">These buttons are for testing purposes only</string>
    <string name="title_activity_alldata">All data</string>
    <string name="button_alldata">All data</string>
    <string name="title_activity_auxbatt">12 volt battery</string>
    <string name="button_AuxBatt">12 volt batt</string>
    <string name="label_auxbat">Voltage, Vehicle state, Charging state</string>
    <string name="label_auxbatvolt">Voltage</string>
    <string name="label_auxbatcurr">Current</string>
    <string name="label_auxbatvunder">Voltage under load</string>
    <string name="label_auxbatcunder">Curent under load</string>
    <string name="label_AuxStatus">Replacement advice</string>
    <string name="label_vehiclestate">Vehicle state</string>
    <string-array name="list_VehicleState">
        <item>Asleep, off (0:red)</item>
        <item>Awake, off (1:green)</item>
        <item>Ignition on (2:blue)</item>
        <item>Starting (3:yellow)</item>
        <item>Awake, on (4:cyan)</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="list_VehicleStateSpring">
    <item>Asleep, off (0:red)</item>
    <item>Awake, off (1:green)</item>
    <item>Sleep mode pending (2:blue)</item>
    <item>AutoACC (3:yellow)</item>
    <item>Contact on</item>
    <item>Ignition on</item>
    <item>Starting in progress</item>
    <item>Engine active</item>
    <item>Autostart</item>
    <item>Engine stop</item>
    <item>10</item>
    <item>11</item>
    <item>12</item>
    <item>13</item>
    <item>14</item>
    <item>Unavailable (15:black)</item>
    </string-array>
    <string-array name="list_VehicleStatePh2">
        <item>Asleep, off (0:red)</item>
        <item>Awake, off (1:green)</item>
        <item>Sleep mode pending (2:blue)</item>
        <item>AutoACC (3:yellow)</item>
        <item>4</item>
        <item>Ignition on</item>
        <item>Starting in process</item>
        <item>Engine active</item>
        <item>Autostart</item>
        <item>Engine stop</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="list_ChargingStatus2">
        <item>No charge (0:red)</item>
        <item>Waiting (planned, 1:green)</item>
        <item>Ended (2:blue)</item>
        <item>In progress (3:yellow)</item>
        <item>Failure (4:cyan)</item>
        <item>Waiting (5:purple)</item>
        <item>Flap open (6:black)</item>
        <item>Unavailable (7:grey)</item>
    </string-array>
    <string-array name="list_AuxStatus">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>Soon</item>
        <item>4</item>
        <item>Now</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="title_activity_battery">Battery</string>
    <string name="button_Battery">Battery</string>
    <string name="graph_SOH">State of health (%)</string>
    <string name="graph_RealIndicatedSoc">SOC real / user (%)</string>
    <string name="help_QA"><![CDATA[More detailed information about these data can be found in the <a href=\'http://canze.fisch.lu/qa/\'>Q & A section</a> of the <a href=\'http://canze.fisch.lu/\'>CanZE homepage</a>.]]></string>
    <string name="graph_CellVoltages">Cell Voltages (V)</string>
    <string name="graph_ModuleTemperatures">Battery modules temperatures (°C)</string>
    <string name="header_GridParameters">Grid parameters</string>
    <string name="label_MainsCurrentType">Mains current type</string>
    <string-array name="list_MainsCurrentType">
        <item>Nok</item>
        <item>AC mono</item>
        <item>AC tri</item>
        <item>DC</item>
        <item>AC bi</item>
    </string-array>
    <string name="label_phaseCurrent">Phase current RMS 1/2/3 (A)</string>
    <string name="label_PhaseVoltage">Phase voltage 1/2/3 (V)</string>
    <string name="label_InterPhaseVoltage">Inter phase voltage 12/23/31 (V)</string>
    <string name="label_MainsActivePowerConsumed">Mains active power consumed (W)</string>
    <string name="label_GroundResistanceOhm">Ground resistance (Ω)</string>
    <string name="label_CompletionStatus">Completion status</string>
    <string name="label_SupervisorState">Supervisor state</string>
    <string name="label_UserSOC">Usable state of charge (%)</string>
    <string name="label_HvTemp">Mean battery temperature (°C)</string>
    <string name="label_SOH">State of health (%)</string>
    <string name="label_AvEner">Available Energy (kWh)</string>
    <string name="label_InstantConsumption">Instant Consumption</string>
    <string name="label_DistToDest">Distance to destination</string>
    <string name="label_TripConsumption">Trip consumption</string>
    <string name="label_Range">Avail. range</string>
    <string name="title_activity_settings">Settings</string>
    <string name="version">Version:</string>
    <string name="label_RemoteDevice">Remote device</string>
    <string name="label_DeviceAddress">Device address</string>
    <string name="label_DeviceType">Device Type</string>
    <string name="label_Car">Car</string>
    <string name="label_LogLevel">Log level</string>
    <string name="label_SafeDrivingMode">Safe Driving Mode</string>
    <string name="label_BluetoothBackgroundMode">Bluetooth Background Mode</string>
    <string name="label_Miles">Miles</string>
    <string name="label_AltFields">Use ISOTP fields</string>
    <string name="label_SdCardLogging">SD card logging</string>
    <string name="label_Debug">Debug</string>
    <string name="label_Fields">Fields</string>
    <string name="help_Fields">This logs all fields requested by the actual screen.</string>
    <string name="label_LogToSdcard1">Log to sdcard1</string>
    <string name="label_Actions">Actions</string>
    <string name="label_ClearCachedData">Clear cached data</string>
    <string name="label_Settings_Device">Device</string>
    <string name="label_CarModel">Model</string>
    <string name="label_DistanceUnit">Distance unit</string>
    <string name="label_Kilometers">Kilometers</string>
    <string name="label_Security">Security</string>
    <string name="label_Display">Display</string>
    <string name="label_CanSeeSettings">CanSee settings</string>
    <string name="label_LogLevelSummary">Defines the level of debug toast messages shown</string>
    <string name="label_LoggingSettings">Logging settings</string>
    <string name="label_Logging">Logging</string>
    <string name="label_ConfigureCustomFragment">Configure custom fragment</string>
    <string name="label_StartupActivity">Startup activity</string>
    <string name="label_Theme">Theme</string>
    <string name="label_Info">Info</string>
    <string name="menu_Custom">Custom</string>
</resources>