<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_main"
        android:orderInCategory="100"
        android:title="@string/menu_Main"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_technical"
        android:orderInCategory="101"
        android:title="@string/menu_Technical"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_experimental"
        android:orderInCategory="102"
        android:title="@string/menu_Experimental"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_custom"
        android:orderInCategory="102"
        android:title="@string/menu_Custom"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_bluetooth"
        android:orderInCategory="100"
        android:title="@string/menu_Bluetooth"
        android:visible="true"
        app:actionLayout="@layout/animated_menu_item"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_crash"
        android:orderInCategory="210"
        android:title="Force crash"
        android:visible="false"
        app:showAsAction="never"
        />

</menu>
