<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:keepScreenOn="true"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lu.fisch.canze.activities.BcbActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/HeaderCharging"
                android:text="@string/header_ChargerKeyParameters"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:text="@string/label_MainsCurrentType"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/textMainsCurrentType"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/label_phaseCurrent"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/textPhase1CurrentRMS"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:text="@string/default_Slash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/textPhase2CurrentRMS"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:text="@string/default_Slash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/textPhase3CurrentRMS"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/label_PhaseVoltage"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/textPhaseVoltage1"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:text="@string/default_Slash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/textPhaseVoltage2"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:text="@string/default_Slash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/textPhaseVoltage3"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/label_InterPhaseVoltage"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/textInterPhaseVoltage12"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:text="@string/default_Slash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/textInterPhaseVoltage23"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:text="@string/default_Slash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/textInterPhaseVoltage31"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/label_MainsActivePowerConsumed"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/textMainsActivePower"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/label_GroundResistanceOhm"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/textGroundResistance"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/label_SupervisorState"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/textSupervisorState"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/label_CompletionStatus"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/textCompletionStatus"
                        android:text="@string/default_Dash"
                        android:gravity="end"
                        android:layout_weight="1"
                        />
                </TableRow>

            </TableLayout>



        </LinearLayout>

    </ScrollView>

    <!-- debug line -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        >

        <TextView
            android:text="@string/label_debug"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <TextView
            android:id="@+id/textDebug"
            android:text="@string/default_debug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</LinearLayout>